# jarbas-tasks

./: .gitignore  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
src/jarbas_tasks/: __init__.py  main.py  tasks.py  util.py
src/jarbas_tasks/data/: bashrc
tests/integration/: test_documentation.py
tests/project_with_tasks/: tasks.py
tests/project_without_tasks/: empty.txt
tests/unit/: test_jarbas_tasks.py
