[bumpversion]
current_version = 0.1.0
commit = True

[metadata]
name = jarbas-tasks
version = attr: jarbas_tasks.__version__
description = Reuse invoke tasks in your Jarbas projects and containers.
long_description = file: README.rst
author = Fábio Macêdo Mendes
author_email = fabiomacedomendes@gmail.com
url = https://github.com/fabiommendes/jarbas-tasks
keywords = 
	automation
	devops
	tools
license = GNU General Public License (GPL)
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: POSIX
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries

[options]
zip_safe = False
platforms = any
include_package_data = True
install_requires = 
	invoke==0.21.0
setup_requires = 
	setuptools >= 30.3.0

[options.entry_points]
console_scripts = 
	jarbas-tasks = jarbas_tasks.__main__:main

[options.package_data]
* = *.txt, *.rst
jarbas_tasks = 
	'data/bashrc',
	'data/docker-bashrc',

[egg_info]
tag_build = 0
tag_date = 0
tag_svn_revision = 0

[bumpversion:file:src/jarbas_tasks/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
